<resources>
    <string name="app_name">Pocket Encryption</string>
    <string name="do_stuff">Do stuff</string>
    <string name="password_name">Password name</string>
    <string name="password_hash">Password hash</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="output">Output</string>
    <string name="clear_passwords">Clear Passwords</string>
    <string name="file_to_add_to">File to add to</string>
    <string name="file">File</string>
    <string name="read_from_file">Read from file</string>
    <string name="write_to_file">Write to file</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="name">Name</string>
    <string name="text">Text</string>
    <string name="folder" translatable="false">Folder</string>
    <string name="read_from_folder">Read from folder</string>
    <string name="write_to_folder">Write to folder</string>
    <string name="current_path">Current path:</string>
    <string name="file_name">File Name:</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="create_new_entry">Create new entry</string>
    <string name="create_a_new">Create a new:</string>
    <string name="text_file">Text file</string>
    <string name="create_and_save">Create and save</string>
    <string name="cancel">Cancel</string>
    <string name="entry_name">Entry name:</string>
    <string name="entry_content">Entry content:</string>
    <string name="path">Path:</string>
    <string name="delete_selected">Delete selected</string>
    <string name="welcome">Welcome!</string>
    <string name="why_set_a_password_advice">It appears that this is the first time using this application. Please set an application password. Without it, anybody could access the data that you enter in this application. There is no way to access this application without setting a password.</string>
    <string name="password">Password:</string>
    <string name="password_warning">The password for this application should be different from any other one of your passwords, for your security.</string>
    <string name="i_ve_already_set_my_password_advice">If you are seeing this screen after using this app already, it means your app data was deleted by the system. This can happen if you deleted your app data using your phone\'s app manager, usually found in the settings app. There is no way to undo or prevent this besides not clearing the app storage. If you didn\'t do this manually, your entire phone may be infected by a malicious software.</string>
    <string name="set_this_password">Set this password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="please_enter_your_password">Please enter your password below to get access to this application.</string>
    <string name="enter">Enter</string>
    <string name="update_password">Update password</string>
    <string name="to_update_your_password_enter_your_current_password_here">To update your password, enter your current password here:</string>
    <string name="enter_your_new_password_here">Enter your new password here:</string>
    <string name="initialising_encryption_handler">Initialising encryption handler</string>
    <string name="why_set_a_password">Why set a password?</string>
    <string name="i_ve_already_set_my_password">I\'ve already set my password</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="please_enter_the_same_password_twice">Please enter the same password twice</string>
    <string name="give_the_entry_a_name">Give the entry a name, please</string>
    <string name="failed_to_create_your_directory">Failed to create your directory, it may already exist</string>
    <string name="you_need_to_select_an_entry_type_above">You need to select an entry type above</string>
    <string name="a_thread_was_interrupted">A thread was interrupted, exiting activity, please retry</string>
    <string name="successfully_deleted_entries">Successfully deleted entries</string>
    <string name="entering_folder">Entering folder</string>
    <string name="loading_editor">Loading editor</string>
    <string name="loading_creator">Loading creator</string>
    <string name="password_accepted">Password accepted</string>
    <string name="password_rejected">Password rejected</string>
    <string name="could_not_find_the_file_containing_your_set_password">Could not find the file containing your set password</string>
    <string name="understood">Understood</string>
    <string name="password_set">Password set</string>
    <string name="failed_to_open_file_to_read_from">Failed to open file to read from, going back</string>
    <string name="saved">Saved!</string>
    <string name="could_not_save_your_file">Could not save your file</string>
    <string name="could_not_set_your_password">Could not set your password</string>
    <string name="could_not_modify_password">Could not modify password</string>
    <string name="this_is_a_problem">This is a problem…</string>
    <string name="to_secure_your_data">To secure your data.</string>
    <string name="creating">Creating</string>
    <string name="login_error_advice">If you have never used this app before and you have not entered any of your data into it, you should try to clear your app data for this app using your settings application. After this, the app will ask you to set a password instead of requiring a password from you that you couldn\'t have set if you haven\'t used the app before.</string>
    <string name="checking_password">Checking password</string>
    <string name="deleting">Deleting</string>
    <string name="failed_to_delete_the_old_file">Failed to delete the old file, it may have been deleted already</string>
    <string name="saving">Saving</string>
</resources>