<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UI.MainActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text" />

    <EditText
        android:id="@+id/etFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/folder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/readButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/readFromFolderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_from_folder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/writeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/writeToFolderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_to_folder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_all_data" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textAlignment="center" />

</androidx.appcompat.widget.LinearLayoutCompat>