<?xml version="1.0" encoding="utf-8"?>

<!-- All id's in this file should start with "debug" to denote the activity -->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.DebugActivity">

    <EditText
        android:id="@+id/debugEtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/debugEtText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text" />

    <EditText
        android:id="@+id/debugEtFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/folder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/debugReadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/debugReadFromFolderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_from_folder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/debugWriteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/debugWriteToFolderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_to_folder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/debugClearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_all_data" />

    <TextView
        android:id="@+id/debugTvOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textAlignment="center" />

</androidx.appcompat.widget.LinearLayoutCompat>