<?xml version="1.0" encoding="utf-8"?>

<!-- All id's in this file should start with "log" to denote the fragment -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".UI.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logWelcomeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_password"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/logPasswordTV"
        app:layout_constraintTop_toBottomOf="@id/logWelcomeTV" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logPasswordTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/logPwdET"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/logPwdET" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/logPwdET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logWelcomeTV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logEnterB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logPwdET" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logWarningTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_error_advice"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>