<?xml version="1.0" encoding="utf-8"?>

<!-- All id's in this file should start with "wel" to denote the fragment -->
<!-- TODO: move all the help text to a different section -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.WelcomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welWelcomeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/welPwdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/welAlreadyUsedB"
        app:layout_constraintTop_toBottomOf="@id/welWelcomeTV">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welPasswordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/welPwdET"
            android:text="@string/password"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/welPwdInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/welPwdET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="64"
                android:textAlignment="textStart"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welPasswordTVConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/welPwdET"
            android:text="@string/confirm_password"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/welPwdInputLayoutConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/welPwdETConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="64"
                android:textAlignment="textStart"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welPwdWarningTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_warning"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/welSetPwdB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_this_password"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/welWhySetPassB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/why_set_a_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/welAlreadyUsedB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_ve_already_set_my_password"
        app:layout_constraintBottom_toTopOf="@+id/welWhySetPassB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>