<?xml version="1.0" encoding="utf-8"?>

<!-- All id's in this file should start with "set" to denote the fragment -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.SettingsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/setCurrentPwdTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/setCurrentPwdET"
        android:text="@string/to_update_your_password_enter_your_current_password_here"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/setCurrentPwdET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/setCurrentPwdET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/setNewPwdTV" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/setNewPwdTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/setCurrentPwdET"
        android:text="@string/enter_your_new_password_here"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/setNewPwdET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/setNewPwdTV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setUpdatePwdB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setNewPwdET" />


</androidx.constraintlayout.widget.ConstraintLayout>